--- a/jango-backend-base/build.gradle
+++ b/jango-backend-base/build.gradle
@@ -5,4 +5,8 @@ plugins {
 dependencies {
     implementation 'com.raketeneinhorn.observability.spring.boot.starter:raketeneinhorn-observability-spring-boot-starter:0.2.0'
     api 'org.springframework.boot:spring-boot-starter-web' // TODO check scope 'api' (copied from demo in fakeservice-demo)
+
+    runtimeOnly 'org.postgresql:postgresql'
+
+    testImplementation 'com.raketeneinhorn.testcontainers:raketeneinhorn-testcontainers:0.0.1'
 }
