--- a/jango-backend-base/build.gradle
+++ b/jango-backend-base/build.gradle
@@ -5,6 +5,10 @@ plugins {
 dependencies {
     implementation 'com.raketeneinhorn.observability.spring.boot.starter:raketeneinhorn-observability-spring-boot-starter:0.2.1'
     api 'org.springframework.boot:spring-boot-starter-web' // TODO check scope 'api' (copied from demo in fakeservice-demo)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    compileOnly 'org.springframework.boot:spring-boot-actuator-autoconfigure'
 
     runtimeOnly 'org.postgresql:postgresql'
 
